gccida/g0/find_reloads_address_part
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_part/src/reload.c:6157:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a3, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_part/src/reload.c:6158:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_part/src/reload.c:6160:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_part/src/reload.c:6197:28: error: use of undeclared identifier 'machine_mode'
tem_0 = force_const_mem( ( machine_mode)*( ( unsigned __int8 *)x + 2), *( rtx *)&x[1]); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_part/src/reload.c:6198:30: error: use of undeclared identifier 'machine_mode'
xa = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx, tem_0); 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_part/src/obj/reload.o] Error 1
